2024-03-06  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-mode.el (eev-mode-map-set): bind `M-h M-l' to
	`find-elocus-links'.

	* eev-elinks.el (find-elocus-links, ee-read-key-sequence)
	(ee-binding-locus, ee-keymap-lookup): new functions.

2024-03-05  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-helpful.el (find-hkeymap-links): new function.

	* eev-code.el (ee-code-c-d-base): added a defvar.

2024-03-04  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-eev-reload-links): added eev-aliases.

	* eev-intro.el (find-eev-levels-intro): rewrote some sections.

	* eev-beginner.el (eev-beginner): added a (require 'eev-aliases).

	* eev-tlinks.el (find-extra-file-links): small changes.

	* eev-intro.el (find-strange-functions-intro): wrote several new
	sections.

2024-03-03  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-strange-functions.el (ee-sf-1stclassvideo-links)
	(ee-sf-codecd-links, ee-sf-pdf-links): small changes.

2024-02-28  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-aliases.el: new file.

	* eev-strange-functions.el: major rewrite.

	* eev-mode.el (eev-mode-map-set): moved `find-efacedescr' from
	`M-h M-s' to `M-h s'; placed `find-strange-function-links' in `M-h
	M-s'.
	(eev-mode-help): updated to mention `find-strange-function-links'.

2024-02-21  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-pdflike.el (ee-code-pdfbackend, ee-code-pdftextbackend):
	added `(setq ee-{c}pdf {fname})'.

2024-02-20  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-wrap.el (ee-needs-quote): new function.
	(ee-add-quote): use `ee-needs-quote'.
	(ee-Q, ee-Qrest): new functions.

	* eev-videolinks.el (find-eev2019video, find-eev2020video)
	(find-eev2021video, find-eev2021bvideo, find-eevnavvideo)
	(find-eevtemplvideo, find-eevfherelvideo, find-eevtestblsvideo)
	(find-eevvlinksvideo, find-oficina20210video)
	(find-oficina2021avideo, find-oficina2021bvideo)
	(find-2021ssrvideo, find-2021workshop1video)
	(find-2021workshop2video, find-2021workshop3video)